--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <h1>Hi, I'm Mustack Rabbi</h1>
+    <h1>Hi, I'm Mustack Rabbi..</h1>
     <p class="subtitle">Wellcome to my Website..</p>
 </body>
 </html>
