--- a/index.html
+++ b/index.html
@@ -9,6 +9,6 @@
 </head>
 <body>
     <h1>Hi, I'm Mustack Rabbi..</h1>
-    <p class="subtitle">Wellcome to my Website..</p>
+    <p class="subtitle">Wellcome to my Website...</p>
 </body>
 </html>
